fix: gap & bottom margin

--- a/assets/global.css
+++ b/assets/global.css
@@ -1,4 +1,8 @@
 /* global */
+html {
+    padding-bottom: 0 !important;
+}
+
 .full-bleed {
     margin: 0;
     padding: 0;
